feat: randomizes deck at new Deck